<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- 应用名 -->
    <string name="app_name">日程管理客户端</string>
    <!-- 星期 -->
    <string name="sun">日</string>
    <string name="mon">一</string>
    <string name="tue">二</string>
    <string name="wed">三</string>
    <string name="thu">四</string>
    <string name="fri">五</string>
    <string name="sat">六</string>
    <string name="select_tip">请拖拽至指定日期上</string>
    <string name="empty_reminder_inf">空标题提醒信息</string>
    <!-- 抽屉demo字段 -->
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="select_date">选择日期</string>
    <string name="add_reminder">添加日程</string>
    <string name="refresh">刷新</string>
    <string name="delete_reminder">删除日程</string>
    <string name="note_book">记事本</string>
    <string name="add_note">添加记事</string>
    <string name="reminder_edit">编辑记事内容</string>
    <string name="category_manage">日程类别管理</string>
    <string name="reminder_search">日程搜索</string>
    <string name="show_pic">显示图片</string>
    <string name="reminder_list">日程列表</string>
    <!-- alarm clock -->
    <string name="the_year">年</string>
    <string name="the_month">月</string>
    <string name="the_day">日</string>
    <string name="all_reminder">所有的提醒</string>
    <string name="label">"标签"</string>
    <string name="alarm_list_title">"闹钟"</string>
    <string name="add_alarm">"添加玲闹钟"</string>
    <string name="desk_clock_button_description">"时钟显示"</string>
    <string name="default_label">"闹钟"</string>
    <string name="menu_desk_clock">"座钟"</string>
    <string name="menu_edit_alarm">"修改闹钟设置"</string>
    <string name="enable_alarm">"启用闹钟"</string>
    <string name="delete_alarm">"取消闹钟"</string>
    <string name="disable_alarm">"停用闹钟"</string>
    <string name="delete_alarm_confirm">"将会取消此闹钟。"</string>
    <string name="alarm_notify_snooze_label">"<xliff:g id="LABEL">%s</xliff:g>（已暂停）"</string>
    <string name="alarm_repeat">"重复"</string>
    <string name="category">日程类别</string>
    <string name="alarm_vibrate">"振动"</string>
    <string name="alert">"铃声"</string>
    <string name="date">日期</string>
    <string name="time">"时间"</string>
    <string name="set_alarm">"设置日程属性"</string>
    <string name="done">"完成"</string>
    <string name="revert">"还原"</string>
    <string name="delete">"删除"</string>
    <string name="alarm_alert_dismiss_text">"取消"</string>
    <string name="alarm_volume_title">"闹钟音量"</string>
    <string name="alarm_volume_summary">"设置闹钟音量"</string>
    <string name="silent_alarm_summary">"静音"</string>
    <string name="alarm_notify_text">"选择暂停或关闭此闹钟。"</string>
    <string name="alarm_alert_snooze_text">"暂停再响"</string>
    <string name="alarm_alert_alert_silenced">"闹钟响铃时间为 <xliff:g id="MINUTES">%d</xliff:g> 分钟"</string>
    <string name="alarm_notify_snooze_text">"已将闹钟设置为从现在起 <xliff:g id="TIME">%s</xliff:g>后再提醒。选中可以取消。"</string>
    <string name="alarm_alert_snooze_set">"暂停 <xliff:g id="MINUTES">%d</xliff:g> 分钟。"</string>

    <string-array name="alarm_set">
        <item msgid="5163476010406761625">"已将此闹钟设置为从现在起不到 1 分钟后提醒。"</item>
        <item msgid="7110525731259629055">"已将此闹钟设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g>后再提醒。"</item>
        <item msgid="7003982794086186185">"已将此闹钟设置为从现在起 <xliff:g id="HOURS">%2$s</xliff:g>后再提醒。"</item>
        <item msgid="7311021123230077742">"已将此闹钟设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g><xliff:g id="HOURS">%2$s</xliff:g>后再提醒。"</item>
        <item msgid="8431715191823114872">"已将此闹钟设置为从现在起 <xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
        <item msgid="3244151088673185428">"已将此闹钟设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g><xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
        <item msgid="3663661342600168814">"已将此闹钟设置为从现在起 <xliff:g id="HOURS">%2$s</xliff:g><xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
        <item msgid="7779544127785487304">"已将该闹钟设置为从现在起 <xliff:g id="DAYS">%1$s</xliff:g><xliff:g id="HOURS">%2$s</xliff:g><xliff:g id="MINUTES">%3$s</xliff:g>后再提醒。"</item>
    </string-array>

    <string name="day">"1 天"</string>
    <string name="days">"<xliff:g id="DAYS">%s</xliff:g> 天"</string>
    <string name="hour">"1 小时"</string>
    <string name="hours" msgid="2071487018566991613">"<xliff:g id="HOURS">%s</xliff:g> 小时"</string>
    <string name="minute">"1 分钟"</string>
    <string name="minutes">"<xliff:g id="MINUTES">%s</xliff:g> 分钟"</string>
    <string name="every_day">"每天"</string>
    <string name="never">"一律不"</string>
    <string name="day_concat">", "</string>
    <string name="clock_instructions">"选择要显示的时钟。"</string>
    <string name="analog_gadget">"模拟时钟"</string>
    <string name="settings">"设置"</string>
    <string name="alarm_in_silent_mode_title">"静音模式下闹钟响"</string>
    <string name="alarm_in_silent_mode_summary">"手机处于静音模式时，闹钟仍会响"</string>
    <string name="snooze_duration_title">"再响间隔"</string>
    <string name="auto_delete">启用自动删除</string>
    <string name="auto_delete_time_out_alarm">如果日程过期，系统会自动将其删除</string>

    <string-array name="snooze_duration_entries">
        <item msgid="8337408933053603125">"5 分钟"</item>
        <item msgid="5294206441496024610">"10 分钟"</item>
        <item msgid="2165904039211935470">"15 分钟"</item>
        <item msgid="7248236967714374250">"20 分钟"</item>
        <item msgid="738394723625179423">"25 分钟"</item>
        <item msgid="1180222611308391616">"30 分钟"</item>
    </string-array>
    <string-array name="snooze_duration_values">
        <item msgid="3655014754453084122">"5"</item>
        <item msgid="8939029597449573449">"10"</item>
        <item msgid="3922647341176353315">"15"</item>
        <item msgid="5821804105985044459">"20"</item>
        <item msgid="6048861883552402852">"25"</item>
        <item msgid="2740866721232379791">"30"</item>
    </string-array>

    <string name="alarm_klaxon_service_desc">"在 DeskClock 中设置的闹钟铃声播放服务。"</string>
    <string name="dateSliderTitle">您选中的时间:\r\n</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="reimder_title_hint">您可在此输入提醒信息</string>
    <string name="login">登陆</string>
    <string name="login_hint">欢迎登陆</string>
    <string name="register">注册</string>
    <string name="logout">注销</string>
    <string name="nickname">昵称</string>
    <string name="name">姓名</string>
    <string name="age">年龄</string>
    <string name="gender">性别</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="email">邮箱</string>
    <string name="repassword">密码重复</string>
    <string name="password">密码</string>
    <string name="share_reminder">分享</string>
    <string name="passwd_hint">请输入密码</string>
    <string name="account_hint">请输入昵称或者邮箱</string>
    <string name="backup">备份</string>
    <string name="backup_date">备份日期</string>
    <string name="recover">还原</string>
    <string name="backup_record">备份记录</string>
    <string name="app_info_manage">应用信息管理</string>
    <string name="return_hint">返回</string>
    <string name="register_hint">欢迎注册</string>
    <string name="save">保存</string>
    <string name="share">分享</string>
    <string name="set_reminder">设置提醒</string>
	<string name="upcoming_reminder">正在进行的日程</string>
	<string name="choose_all">全选</string>
	<string name="choose_revert">反选</string>
	<string name="choose_none">不选</string>
	<string name="text_length">文字长度</string>
	<string name="text_color">文字颜色</string>
	<string name="text_bg">文字背景</string>
	<string name="text_size">文字大小</string>
	<string name="text_hint">这里的‘文字长度’是指，当文本超过该长度，就将生成文字图片。您可以在这里设置生成文字图片的样式。</string>
	<string name="text2pict_setting">文字图片的转换设置</string>
	<string name="delete_all_info">删除本地所有信息</string>
	<string name="account_manage">账户管理</string>
	<string name="server_info_setting">服务端信息设置</string>
	<string name="server_ip">服务器IP地址</string>
	<string name="server_port">服务器端口号</string>
</resources>