<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dip"
    android:orientation="vertical" >

    
    <Button
        android:id="@+id/account_manage_login"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:text="@string/login" />

    <Button
        android:id="@+id/account_manage_register"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:text="@string/register" />

    <Button
        android:id="@+id/account_manage_logout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:text="@string/logout" />

    <Button
        android:id="@+id/account_manage_return"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:text="@string/return_hint" />

</LinearLayout>