<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/login_error_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dip"
            android:layout_marginRight="20dip"
            android:gravity="left"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="#ff0000"
            android:visibility="invisible" />
    </LinearLayout>

    <EditText
        android:id="@+id/login_username_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:layout_marginTop="30dip"
        android:drawableLeft="@drawable/account_icon"
        android:drawablePadding="6dip"
        android:gravity="center_vertical"
        android:hint="@string/account_hint"
        android:inputType="text"
        android:maxLength="30"
        android:singleLine="true" />

    <EditText
        android:id="@+id/login_password_edit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dip"
        android:layout_marginRight="8dip"
        android:layout_marginTop="30dip"
        android:drawableLeft="@drawable/secrt_icon"
        android:drawablePadding="6dip"
        android:gravity="center_vertical"
        android:hint="@string/passwd_hint"
        android:inputType="textPassword"
        android:maxLength="30"
        android:singleLine="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/gridview_bk"
            android:gravity="center"
            android:text="@string/login" />

        <Button
            android:id="@+id/register_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:background="@drawable/gridview_bk"
            android:gravity="center"
            android:text="@string/register" />
    </LinearLayout>

</LinearLayout>